--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>farmacia</title>
+  <title>contacto</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -17,16 +17,18 @@
     <nav class="d-flex justify-content-evenly align-items-center">
         <!-- <img src="./images/imagen22.jpg" alt="logo"> -->
         <a href="./index.html"> Inicio</a>
-        <a href="#"> Farmacia</a>
+        <a href="./farmacia.html"> Farmacia</a>
         <a href="./juguetes.html"> Juguetes</a>
-        <a href="./contacto.html"> ✉Contacto</a>
+        <a href="#"> ✉Contacto</a>
     </nav>
   </header>
   <main>
     Main
     <div id="app">
       <div>
-        cards imagenes
+        <form>
+          
+        </form>
       </div>
     </div>
   </main>
