--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franco | Home</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./estilos/style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -17,14 +17,29 @@
         <nav class="d-flex justify-content-evenly align-items-center">
             <!-- <img src="./images/imagen22.jpg" alt="logo"> -->
             <a href="#"> Inicio</a>
-            <a href="farmacia.html"> Farmacia</a>
-            <a href="juguetes.html"> Juguetes</a>
-            <a href="contacto.html"> ✉Contacto</a>
+            <a href="./farmacia.html"> Farmacia</a>
+            <a href="./juguetes.html"> Juguetes</a>
+            <a href="./contacto.html"> ✉Contacto</a>
         </nav>
     </header>
     <main>
-        Main
-        <div id="app"></div>
+        <div id="app">
+            <div id="carrusel">
+                carrusel
+            </div>
+            <div>
+                <h2>Bienvenidos a mi tienda</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aperiam. Veniam accusantium nisi vel voluptatum 
+                    fuga rerum ipsam sit reprehenderit repudiandae. Quidem est laudantium voluptas exercitationem amet iure enim eum?
+                </p>
+            </div>
+            <div>
+                <p>Nuestra dirección es Rio de Janeiro 300 (Caballito)</p>
+                <div>
+                    map
+                </div>
+            </div>
+        </div>
     </main>
     <footer>Footer</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
