--- a/farmacia.html
+++ b/farmacia.html
@@ -26,7 +26,7 @@
     Main
     <div id="app">
       <div>
-        cards imageness
+        cards imagenessss
       </div>
     </div>
   </main>
