cree parra en el index

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="app">
             <div id="carrusel">
                 carrusel
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, quasi veniam recusandae dolores nulla porro minus ut vel esse, eum doloremque voluptatum quas illum voluptatibus quibusdam magnam assumenda ipsum! Cupiditate!
             </div>
             <div>
                 <h2>Bienvenidos a mi tienda</h2>
