--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="app">
             <div id="carrusel">
                 carrusel
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat modi enim architecto officia possimus sed sunt quia, consectetur veniam consequatur totam aut iusto, ipsum saepe quod maiores, eveniet molestiae nemo?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, quasi veniam recusandae dolores nulla porro minus ut vel esse, eum doloremque voluptatum quas illum voluptatibus quibusdam magnam assumenda ipsum! Cupiditate!
             </div>
             <div>
