pulleando nuevas branchs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="./juguetes.html"> Juguetes</a>
             <a href="./contacto.html"> ✉Contacto</a>
         </nav>
-    </header>
+    </headpuller>
     <main>
         <div id="app">
             <div id="carrusel">
