--- a/farmacia.html
+++ b/farmacia.html
@@ -24,15 +24,15 @@
   </header>
   <main>
     <div id="app">
-      <div class="d-flex justify-content-center mt-3">
+      <div class="d-flex justify-content-center mt-3 mb-3">
         <div class="d-flex justify-content-center row gap-3 w-75">
-        <div class="card col-3 " style="width: 20rem; height: 32rem" v-for="medicamento in medicamentos">
+        <div class="card " style="width: 20rem; height: 32rem" v-for="medicamento in medicamentos">
           <img v-bind:src="medicamento.imagen" class="card-img-top d-flex align-self-center" alt="...">
-          <div class="card-body" >
+          <div class="card-body d-flex justify-content-center flex-column" >
             <h5 class="card-title far">{{medicamento.nombre}}</h5>
             <p class="cart-text">$ {{medicamento.precio}}</p>
             <p class="card-text">{{medicamento.descripcion}}</p>
-            <a href="#" class="btn btn-primary d-flex justify-content-center">Agregar al carrito</a>
+            <a href="#" class="btn btn-primary btn-sm">Agregar al carrito</a>
           </div>
         </div>
       </div>
