--- a/index.html
+++ b/index.html
@@ -1,36 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franco | Home</title>
     <link rel="stylesheet" href="./estilos/style.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
+
 <body>
-    <header>Header
-        <nav class="d-flex justify-content-evenly align-items-center">
-            <!-- <img src="./images/imagen22.jpg" alt="logo"> -->
-            <a href="#"> Inicio</a>
-            <a href="./farmacia.html"> Farmacia</a>
-            <a href="./juguetes.html"> Juguetes</a>
-            <a href="./contacto.html"> ✉Contacto</a>
-        </nav>
+    <header>
+        <div class="d-flex align-items-center h-100 justify-content-evenly">
+
+
+            <nav class="d-flex align-items-center ">
+                <div class="dropdown">
+                    <a href="#" class="dropbtn">Home</a>
+                </div>
+                <div class="dropdown">
+                    <a href="./farmacia.html" class="dropbtn">Farmacia</a>
+                    <div class="dropdown-content">
+                        <a href="#">Antipulgas</a>
+                        <a href="#">Antiparasitario</a>
+                        <a href="#">Pipetas</a>
+                        <a href="#">Suplementos</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <a href="./juguetes.html" class="dropbtn">Juguetes</a>
+                    <div class="dropdown-content">
+                        <a href="#">Pelotas</a>
+                        <a href="#">Cuerdas</a>
+                        <a href="#">Bebederos</a>
+                        <a href="#">Frisbees</a>
+                    </div>
+                </div>
+                <div>
+                    <a href="./contacto.html" class="dropbtn">ContactUS</a>
+                </div>
+            </nav>
+                <div>
+
+                    <h1>Franco PetShop</h1>
+                </div>
+                
+                <div>
+                    <a href="mailto:francopetshop@gmail.com" target="_blank"
+                    class="dropbtn">✉francopetshop@gmail.com</a>
+                </div>
+        </div>
     </header>
     <main>
         <div id="app">
             <div id="carrusel">
-                carrusel
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="./images/2204 Dinamica Online Alimentos Semana 2 Website Banner D.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/2204 Dinamica_Online_Rewards_Website_Banners_D.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/2204_Gato_Royal Canin_156298_Regalo_156288_Regalo_WebsiteBannerD.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/2204_Perro y Gato_Juguetes_269214_H15_221065_269042_222109_Website BannerD.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/2204_Perro_Pro Plan_146002_Regalo_146081_Regalo_Website BannerD.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
             </div>
             <div>
                 <h2>Bienvenidos a mi tienda</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aperiam. Veniam accusantium nisi vel voluptatum 
-                    fuga rerum ipsam sit reprehenderit repudiandae. Quidem est laudantium voluptas exercitationem amet iure enim eum?
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aperiam. Veniam accusantium nisi vel
+                    voluptatum
+                    fuga rerum ipsam sit reprehenderit repudiandae. Quidem est laudantium voluptas exercitationem amet
+                    iure enim eum?
                 </p>
             </div>
             <div>
@@ -43,7 +109,8 @@
     </main>
     <footer>Footer</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
