--- a/farmacia.html
+++ b/farmacia.html
@@ -25,14 +25,24 @@
   <main>
     Main
     <div id="app">
-      <div>
-        cards imageness
+      <div v-for="articulo in articulos">
+        <div class="card" style="width: 18rem;">
+          <img v.bind:src="articulos.imagen" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">{{articulos.nombre}}</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
       </div>
     </div>
+    
   </main>
   <footer>Footer</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
   crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/vue@3"></script>
+  <script src="./javascript/main.js"></script>
 </body>
 </html>
