--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franco | Home</title>
     <link rel="stylesheet" href="./estilos/style.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
+
 <body>
     <header>Header
         <nav class="d-flex justify-content-evenly align-items-center">
@@ -24,15 +23,13 @@
     </header>
     <main>
         <div id="app">
-            <div id="carrusel">
-                carrusel
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat modi enim architecto officia possimus sed sunt quia, consectetur veniam consequatur totam aut iusto, ipsum saepe quod maiores, eveniet molestiae nemo?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, quasi veniam recusandae dolores nulla porro minus ut vel esse, eum doloremque voluptatum quas illum voluptatibus quibusdam magnam assumenda ipsum! Cupiditate!
-            </div>
+
             <div>
                 <h2>Bienvenidos a mi tienda</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aperiam. Veniam accusantium nisi vel voluptatum 
-                    fuga rerum ipsam sit reprehenderit repudiandae. Quidem est laudantium voluptas exercitationem amet iure enim eum?
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aperiam. Veniam accusantium nisi vel
+                    voluptatum
+                    fuga rerum ipsam sit reprehenderit repudiandae. Quidem est laudantium voluptas exercitationem amet
+                    iure enim eum?
                 </p>
             </div>
             <div>
@@ -45,7 +42,8 @@
     </main>
     <footer>Footer</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
