--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="d-flex align-items-center h-100 justify-content-evenly">
 
-
+            <img class="h-50" src="./images/imagen22.jpg" alt="logo">
             <nav class="d-flex align-items-center ">
                 <div class="dropdown">
                     <a href="#" class="dropbtn">Home</a>
@@ -23,19 +23,19 @@
                 <div class="dropdown">
                     <a href="./farmacia.html" class="dropbtn">Farmacia</a>
                     <div class="dropdown-content">
-                        <a href="#">Antipulgas</a>
-                        <a href="#">Antiparasitario</a>
-                        <a href="#">Pipetas</a>
-                        <a href="#">Suplementos</a>
+                        <a href="./farmacia.html">Antipulgas</a>
+                        <a href="./farmacia.html">Antiparasitario</a>
+                        <a href="./farmacia.html">Pipetas</a>
+                        <a href="./farmacia.html">Suplementos</a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <a href="./juguetes.html" class="dropbtn">Juguetes</a>
                     <div class="dropdown-content">
-                        <a href="#">Pelotas</a>
-                        <a href="#">Cuerdas</a>
-                        <a href="#">Bebederos</a>
-                        <a href="#">Frisbees</a>
+                        <a href="./juguetes.html">Pelotas</a>
+                        <a href="./juguetes.html">Cuerdas</a>
+                        <a href="./juguetes.html">Bebederos</a>
+                        <a href="./juguetes.html">Frisbees</a>
                     </div>
                 </div>
                 <div>
