--- a/farmacia.html
+++ b/farmacia.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Farmacia</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"/>
-  <link rel="stylesheet" href="./estilos/style.css">
-</head>
-<body>
-  <header>Header
-    <nav class="d-flex justify-content-evenly align-items-center">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Farmacia</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./estilos/style.css" />
+  </head>
+  <body>
+    <header>
+      Header
+      <nav class="d-flex justify-content-evenly align-items-center">
         <!-- <img src="./images/imagen22.jpg" alt="logo"> -->
         <a href="./index.html"> Inicio</a>
         <a href="#"> Farmacia</a>
         <a href="./juguetes.html"> Juguetes</a>
         <a href="./contacto.html"> ✉Contacto</a>
-    </nav>
-  </header>
-  <main>
-    <div id="app">
-      <div v-for="articulo in articulos">
-        <div class="card" style="width: 18rem;">
-          <img v.bind:src="articulos.imagen" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">{{articulos.nombre}}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      </nav>
+    </header>
+    <main>
+      <div id="app">
+        <div class="d-flex justify-content-center mt-3 mb-3">
+          <div class="d-flex justify-content-center row gap-3 w-75">
+            <div
+              class="card"
+              style="width: 20rem; height: 32rem"
+              v-for="medicamento in medicamentos"
+            >
+              <img
+                v-bind:src="medicamento.imagen"
+                class="card-img-top d-flex align-self-center"
+                alt="..."
+              />
+              <div class="card-body d-flex justify-content-center flex-column">
+                <h5 class="card-title far">{{medicamento.nombre}}</h5>
+                <p class="cart-text">$ {{medicamento.precio}}</p>
+                <p class="card-text">{{medicamento.descripcion}}</p>
+                <a href="#" class="btn btn-primary btn-sm"
+                  >Agregar al carrito</a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    
-  </main>
-  <footer>Footer</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-  crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/vue@3"></script>
-  <script src="./javascript/main.js"></script>
-</body>
+    </main>
+    <footer>Footer</footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/vue@3"></script>
+    <script src="./javascript/main.js"></script>
+  </body>
 </html>
