--- a/farmacia.html
+++ b/farmacia.html
@@ -26,7 +26,7 @@
     <div id="app">
       <div class="d-flex justify-content-center">
         <div class="d-flex justify-content-between row gap-3 w-75">
-        <div class="card" style="width: 302px; height: 500px" v-for="medicamento in medicamentos">
+        <div class="card mt-5" style="width: 302px; height: 500px" v-for="medicamento in medicamentos">
           <img v-bind:src="medicamento.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
           <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
             <h5 class="card-title" >{{medicamento.nombre}}</h5>
@@ -46,7 +46,7 @@
       </div>
     </div>
   </main>
-  <footer>Footer</footer>
+  <footer >Footer</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
   crossorigin="anonymous"></script>
