--- a/juguetes.html
+++ b/juguetes.html
@@ -53,76 +53,70 @@
                 class="dropbtn">✉francopetshop@gmail.com</a>
             </div>
     </div>
-</header>
+  </header>
   <main>
-
-
-    
     <div id="app">
-      <div class="d-flex justify-content-center">
-        <div class="d-flex justify-content-between row gap-3 w-75">
-        <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetes">
-          <img v-bind:src="juguete.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
-          <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
-            <h5 class="card-title" >{{juguete.nombre}}</h5>
-            <p class="card-text">$ {{juguete.precio}}</p>
-            <div class="btn-group dropend">
-              <button class="btn btn-secondary btn-sm dropdown-toggle bg-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Ver descripcion
-              </button>
-              <ul class="dropdown-menu" style="width: 300px;"> 
-                <li class="cart-text">{{juguete.descripcion}}</li>
-              </ul>
-            </div>
-            <a href="#" class="btn btn-primary  btn-sm">Agregar al carrito</a>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!-- <div>
+
+      <div>
         <button class="btn btn-primary" v-on:click="mostrarCarritoDeCompras">Carrito</button>
       </div>
-      <div class="row row-cols-1 row-cols-md-3 g-4" v-if="mostrarCarrito">
+
+
+      <div v-if="mostrarCarrito == true">
         <div v-if="carrito.length == 0">
           <p>carrito vacio</p>
           <button class="btn btn-primary" v-on:click="seguirComprando">Seguir comprando</button>
         </div>
-        <div class="col" v-for="producto in carrito" v-else>
-          <div class="card h-100">
-            <img :src="producto.imagen" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{producto.nombre}}</h5>
-              <p class="card-text">{{producto.descripcion}}</p>
-            </div>
-            <div class="card-footer">
-              <p class="card-text">{{producto.precio}}</p>
-              <button class="btn btn-primary">Comprar</button>
-              <button class="btn btn-primary" v-on:click="seguirComprando">Seguir comprando</button>
+
+        <div class="d-flex justify-content-center" v-else>
+          <div class="d-flex justify-content-between row gap-3 w-75">
+            <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in carrito">
+              <img v-bind:src="juguete.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
+              <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
+                <h5 class="card-title" >{{juguete.nombre}}</h5>
+                <p class="card-text">$ {{juguete.precio}}</p>
+                <div class="btn-group dropend">
+                  <button class="btn btn-secondary btn-sm dropdown-toggle bg-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Ver descripcion
+                  </button>
+                  <ul class="dropdown-menu" style="width: 300px;"> 
+                    <li class="cart-text">{{juguete.descripcion}}</li>
+                  </ul>
+                </div>
+                
+              </div>
             </div>
           </div>
-        </div> 
+          <div>
+            <button href="#" class="btn btn-primary  btn-sm" v-on:click="">Comprar</button>
+          </div>
+          <div>
+            <button class="btn btn-primary" v-on:click="seguirComprando">Seguir comprando</button>
+          </div>
+        </div>
       </div>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4" v-else>
-        <div class="col" v-for="juguete in juguetes">
-          <div class="card h-100">
-            <img :src="juguete.imagen" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{juguete.nombre}}</h5>
-              <p class="card-text">{{juguete.descripcion}}</p>
-            </div>
-            <div class="card-footer">
-              <p class="card-text">{{juguete.precio}}</p>
-              <button class="btn btn-primary" v-on:click="aniadirACarrito(juguete)">Aniadir</button>
+      <div class="d-flex justify-content-center" v-else>
+        <div class="d-flex justify-content-between row gap-3 w-75">
+          <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetes">
+            <img v-bind:src="juguete.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
+            <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
+              <h5 class="card-title" >{{juguete.nombre}}</h5>
+              <p class="card-text">$ {{juguete.precio}}</p>
+              <div class="btn-group dropend">
+                <button class="btn btn-secondary btn-sm dropdown-toggle bg-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Ver descripcion
+                </button>
+                <ul class="dropdown-menu" style="width: 300px;"> 
+                  <li class="cart-text">{{juguete.descripcion}}</li>
+                </ul>
+              </div>
+              <button href="#" class="btn btn-primary  btn-sm" v-on:click="aniadirACarrito(juguete)">Agregar al carrito</button>
             </div>
           </div>
-        </div> 
-      </div> -->
-
-
-
- 
-
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="d-flex row d-wrap justify-content-between align-items-start">    
     <div class="col-5">
