--- a/farmacia.html
+++ b/farmacia.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous"/>
   <link rel="stylesheet" href="./estilos/style.css">
 </head>
-<body>
+<body id="fondo">
   <header>
     <div class="d-flex align-items-center h-100 justify-content-evenly">
 
