--- a/juguetes.html
+++ b/juguetes.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous"/>
   <link rel="stylesheet" href="./estilos/style.css">
 </head>
-<body>
+<body id="fondo">
   <header>
     <div class="d-flex align-items-center h-100 justify-content-evenly">
 
@@ -79,7 +79,7 @@
         </div>
       </div>
       </div>
-      <!-- <div>
+      <div>
         <button class="btn btn-primary" v-on:click="mostrarCarritoDeCompras">Carrito</button>
       </div>
       <div class="row row-cols-1 row-cols-md-3 g-4" v-if="mostrarCarrito">
@@ -117,7 +117,7 @@
             </div>
           </div>
         </div> 
-      </div> -->
+      </div>
 
 
 
