--- a/juguetes.html
+++ b/juguetes.html
@@ -61,11 +61,13 @@
     <div id="app">
       <div class="d-flex justify-content-center">
         <div class="d-flex justify-content-between row gap-3 w-75">
-        <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetes">
-          <img v-bind:src="juguete.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
-          <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
-            <h5 class="card-title" >{{juguete.nombre}}</h5>
-            <p class="card-text">$ {{juguete.precio}}</p>
+          <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetes">
+            <img v-bind:src="juguete.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
+            <div class="card-body d-flex justify-content-between align-items-center flex-column">
+              <div class="producto d-flex justify-content-center align-items-center rounded"> Ultimos 5 Productos</div>
+              <div class="productoAgotado d-flex justify-content-center align-items-center rounded"> Producto Agotado</div>
+              <h5 class="card-title" >{{juguete.nombre}}</h5>
+              <p class="card-text">$ {{juguete.precio}}</p>
             <div class="btn-group dropend">
               <button class="btn btn-secondary btn-sm dropdown-toggle bg-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Ver descripcion
