--- a/farmacia.html
+++ b/farmacia.html
@@ -23,7 +23,7 @@
                         <a href="./index.html" class="dropbtn">Home</a>
                     </div>
                     <div class="dropdown">
-                        <a href="#" class="dropbtn">Farmacia</a>
+                        <a href="./farmacia.html" class="dropbtn">Farmacia</a>
                         <div class="dropdown-content">
                             <a href="./farmacia.html">Antipulgas</a>
                             <a href="./farmacia.html">Antiparasitario</a>
@@ -52,6 +52,17 @@
 
         <!-- iconos mail y carrito -->
         <div id="divmailcarrito" class="d-flex justify-content-end ">
+
+       
+
+
+          <form >
+            <input v-model="productoBuscador" type="text">
+              <button  v-on:click.prevent="buscadorMedicamentos">Buscar</button>
+          </form>
+
+          
+
           <a href="mailto:francopetshop@gmail.com" target="_blank"
           class="dropbtn"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -140,7 +151,7 @@
   <!-- muestra cards estaticas de compra -->
   <div class="d-flex justify-content-center">
     <div class="d-flex justify-content-between row gap-3 w-75">
-      <div class="card mt-5" style="width: 302px; height: 500px" v-for="medicamento in medicamentos">
+      <div class="card mt-5" style="width: 302px; height: 500px" v-for="medicamento in medicamentosFiltrados">
         <img v-bind:src="medicamento.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
         <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
 
