--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
         </nav>
         <div class="divlogopetsohop">
           <!-- <h1>Franco PetShop</h1> -->
-          <img class="logopetshop" src="./images/logo franco pet shop blanco.png" alt="">
+          <img class="logopetshop" src="./images/logo_con_texto_naranja_patitas.png" alt="Logo Franco Pet">
       </div>
             
 
