--- a/farmacia.html
+++ b/farmacia.html
@@ -46,7 +46,7 @@
         </nav>
         <div class="divlogopetsohop">
  
-          <img class="logopetshop" src="./images/logo franco pet shop blanco.png" alt="">
+          <img class="logopetshop" src="./images/logo_con_texto_naranja_patitas.png" alt="Logo Franco Pet">
       </div>
               
 
@@ -178,6 +178,7 @@
   </div>
 
 </main>
+
     <a
       href="https://www.instagram.com/mindhub_la/"
       class="btn-wsp position-fixed d-flex align-items-center justify-content-center"
