--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                     </div>
                 </div>
                 <div>
-                    <a href="./contacto.html" class="dropbtn">ContactUS</a>
+                    <a href="./contacto.html" class="dropbtn">Contacto</a>
                 </div>
             </nav>
                 <div class="divlogopetsohop">
                    
-                    <img class="logopetshop" src="./images/logo franco pet shop blanco.png" alt="">
+                    <img class="logopetshop" src="./images/logo_con_texto_naranja_patitas.png" alt="Logo Franco Pet">
                 </div>
                 
 
@@ -103,19 +103,19 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="./images/2204 Dinamica Online Alimentos Semana 2 Website Banner D.png" class="d-block w-100" alt="imgofertas1">
+                        <img src="./images/1_oferta.png" class="d-block w-100" alt="imgofertas1">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204 Dinamica_Online_Rewards_Website_Banners_D.png" class="d-block w-100" alt="imgofertas2">
+                        <img src="./images/2_oferta.png" class="d-block w-100" alt="imgofertas2">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204_Gato_Royal Canin_156298_Regalo_156288_Regalo_WebsiteBannerD.png" class="d-block w-100" alt="imgofertas3">
+                        <img src="./images/3_oferta.png" class="d-block w-100" alt="imgofertas3">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204_Perro y Gato_Juguetes_269214_H15_221065_269042_222109_Website BannerD.png" class="d-block w-100" alt="imgofertas4">
+                        <img src="./images/1_oferta.png" class="d-block w-100" alt="imgofertas4">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204_Perro_Pro Plan_146002_Regalo_146081_Regalo_Website BannerD.png" class="d-block w-100" alt="imgofertas5">
+                        <img src="./images/3_oferta.png" class="d-block w-100" alt="imgofertas5">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -129,30 +129,7 @@
                   </div>
             </div>
 
-            <div >
-                <!-- <h2>Bienvenidos a mi tienda</h2> -->
-                <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./images/carusel 1.png" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./images/carusel 2.png" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./images/carusel 3.png" class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-            </div>
+
 
             <div class="d-flex justify-content-center">
               <div class="d-flex justify-content-between row gap-3 w-75">
@@ -174,6 +151,31 @@
               </div>
             </div>
             </div>
+
+            <div >
+              <!-- <h2>Bienvenidos a mi tienda</h2> -->
+              <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                      <img src="./images/carusel 1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                      <img src="./images/carusel 2.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="./images/carusel 3.png" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+          </div>
         </div>
 
     </main>
