--- a/juguetes.html
+++ b/juguetes.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="divlogopetsohop">
  
-          <img class="logopetshop" src="./images/logo franco pet shop blanco.png" alt="">
+          <img class="logopetshop" src="./images/logo_con_texto_naranja_patitas.png" alt="Logo Franco Pet">
       </div>
               
 
