--- a/juguetes.html
+++ b/juguetes.html
@@ -151,7 +151,7 @@
         <div class="d-flex justify-content-center">
 
           <div class="d-flex justify-content-between row gap-3 w-75 pb-5">
-            <div id="tarjetas1" class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetes">
+            <div id="tarjetas1" class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetesFiltrados">
               <img v-bind:src="juguete.imagen" class="card-img-top align-self-center  pt-3" style="width: 250px; height: 250px;" alt="...">
 
               <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
