animacion productos destacados

--- a/farmacia.html
+++ b/farmacia.html
@@ -89,7 +89,7 @@
                   <div class="offcanvas-header">
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
-                  <p>carrito vacio</p>
+                  <p>El carrito esta vacio</p>
                 </div>
 
                 <div v-else>
@@ -161,7 +161,7 @@
 
 
           <div class="producto d-flex justify-content-center align-items-center rounded" v-if="!(medicamento.stock >5)"> 
-            Ultimos 5 Productos
+            Ultimos Productos
           </div>
           <!-- <div class="productoAgotado d-flex justify-content-center align-items-center rounded"> Producto Agotado</div> -->
 
