--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                   </div>
             </div>
 
-  <div id="textoAnimado">
-
+  <div id="textoAnimado" class="d-flex pt-5 pb-1">
+    <h6>PRODUCTOS DESTACADOS</h6>
   </div
-            <div class="d-flex justify-content-center">
-              <div class="d-flex justify-content-between row gap-auto w-35 pb-5 m-3">
+            < div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-between row gap-auto w-35 pb-5 m-2">
               <div id="tarjetas" class="card mt-5" style="width: 282px; height: 480px" v-for="producto in productosMenosStock">
-                <img v-bind:src="producto.imagen" class="card-img-top align-self-center pt-3" style="width: 230px; height: 230px;" alt="...">
+                <img v-bind:src="producto.imagen" class="card-img-top align-self-center pt-1" style="width: 230px; height: 230px;" alt="...">
                 <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
                  <p class="card-title" >{{producto.nombre}}</p>
                  <h5   class="card-text">Precio: ${{producto.precio}}</h5>
@@ -153,6 +153,7 @@
                   </div>
 
                 </div>
+              </div>
               </div>
             </div>
             </div>
@@ -184,7 +185,6 @@
         </div>
 
     </main>
-  </div>
     <a href="https://www.instagram.com/mindhub_la/" class="btn-wsp position-fixed d-flex align-items-center justify-content-center" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
