--- a/juguetes.html
+++ b/juguetes.html
@@ -86,7 +86,7 @@
                   <div class="offcanvas-header">
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
-                  <p>carrito vacio</p>
+                  <p>El carrito esta vacio</p>
                 </div>
 
                 <div v-else>
@@ -158,7 +158,7 @@
 
 
                 <div class="producto d-flex justify-content-center align-items-center rounded" v-if="!(juguete.stock >5)"> 
-                  Ultimos 5 Productos
+                  Ultimos Productos
                 </div>
                 <!-- <div class="productoAgotado d-flex justify-content-center align-items-center rounded"> Producto Agotado</div> -->
 
