resolviendo conflictos de todos lados

--- a/juguetes.html
+++ b/juguetes.html
@@ -211,7 +211,7 @@
         <div class="d-flex justify-content-center">
 
           <div class="d-flex justify-content-between row gap-3 w-75">
-            <div id="tarjetas1" class="card mb-5" style="width: 282px; height: 480px" v-for="juguete in juguetes">
+            <div id="tarjetas1" class="card mb-5" style="width: 282px; height: 480px" v-for="juguete in juguetesFiltrados">
               <img v-bind:src="juguete.imagen" class="card-img-top align-self-center pt-1" style="width: 230px; height: 230px;" alt="...">
 
 
