--- a/farmacia.html
+++ b/farmacia.html
@@ -211,7 +211,7 @@
   <h3 class="d-flex justify-content-center mb-2">Farmacia</h3>
     <div class="d-flex justify-content-center">
       <div class="d-flex justify-content-between row gap-3 w-75">
-        <div id="tarjetas1" class="card mb-5" style="width: 282px; height: 480px" v-for="medicamento in medicamentos">
+        <div id="tarjetas1" class="card mb-5" style="width: 282px; height: 480px" v-for="medicamento in medicamentosFiltrados">
           <img v-bind:src="medicamento.imagen" class="card-img-top align-self-center pt-1" style="width: 230px; height: 230px;" alt="...">
           <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
 
