--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 
 
-                <!-- iconos mail y carrito -->
+              
                 <div id="divmailcarrito" class="d-flex justify-content-end ">
                     <a  href="mailto:francopetshop@gmail.com" target="_blank"
                     class="dropbtn"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -192,7 +192,7 @@
     </svg></a>
     <footer class="d-flex  flex-wrap justify-content-between align-items-start">  
         <div class="d-flex row col-3 align-items-baseline justify-content-center">
-          <img src="./images/carita naranja.png" id="caritaPerroFooter" alt="logo franco pet shop pequeño">
+          <img src="./images/carita naranja.png" class="img-fluid" id="caritaPerroFooter" alt="logo franco pet shop pequeño">
         </div>
         <div class="d-flex row col-3">
           <a href="./juguetes.html" class="titulo_footer" >Tienda</a>
