--- a/contacto.html
+++ b/contacto.html
@@ -103,7 +103,7 @@
       <div class="d-flex justify-content-center mt-3 p-3" v-if="mostrar">
         <form id="formulario" v-on:submit.prevent="mostrarMensajeDeENvioDeFormulario">
         
-          <fieldset>
+          <fieldset id="itemsFormulario">
             <div class="form-group">
               <label for="formGroupExampleInput">Nombres</label>
               <input type="name" class="form-control" id="formGroupExampleInput" placeholder="Escriba su/s nombre/s"  required>
@@ -141,7 +141,7 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             
-            <input type="submit" value="Enviar" >
+            <input id="enviarFormulario" type="submit" value="Enviar" class="rounded" >
           </fieldset>
         </form>
       </div>
